First commit index.html file

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
             Universidade Federal do Delta do Parnaíba
         </h2>
     </div>
+    <p>Contato: nemat.ufdpar@gmail.com</p>
 </body>
 </html>
