--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="/images/logo-nemat.png" alt="Logo NEMAT-UFDPar">
+        <img src="./images/logo-nemat.png" alt="Logo NEMAT-UFDPar">
     </div>
     <div>
         <h2>
