--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="logo">
-        <img src="./images/logo-nemat.png" alt="Logo NEMAT-UFDPar">
+        <img src="./images/logo_nemat-ufdpar.png" height="281px" alt="Logo NEMAT-UFDPar">
     </div>
     <div>
         <h2>
             Universidade Federal do Delta do Parnaíba
         </h2>
     </div>
-    <div>Contato: nemat.ufdpar@gmail.com</div>
+    <div>Contato: nemat.ufdpar@gmail.com</divcl>
 </body>
 </html>
