--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             Universidade Federal do Delta do Parnaíba
         </h2>
     </div>
-    <div>Contato: nemat.ufdpar@gmail.com</divcl>
+    <div>Contato: nemat.ufdpar@gmail.com</div>
 </body>
 </html>
