--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <img src="./images/logo_nemat-ufdpar.png" height="281px" alt="Logo NEMAT-UFDPar">
     </div>
     <div>
-        <h2>
-            Universidade Federal do Delta do Parnaíba
-        </h2>
+        <h2>Universidade Federal do Delta do Parnaíba</h2>
+        <h1>Núcleo de Estudos em Matemática</h1>
     </div>
     <div>Contato: nemat.ufdpar@gmail.com</div>
 </body>
