--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="logo">
         <img src="./images/logo_nemat-ufdpar.png" height="281px" alt="Logo NEMAT-UFDPar">
     </div>
-    <div>
+    <div class="instituicao">
         <h1>Universidade Federal do Delta do Parnaíba</h1>
         <h2>Núcleo de Estudos em Matemática</h2>
     </div>
