--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <div class="logo">
-        <img src="./images/logo-nemat-ufdpar.png" height="200px" alt="Logo NEMAT-UFDPar">
+        <img src="./images/logo-nemat.png" height="200px" alt="Logo NEMAT-UFDPar">
     </div>
     <div class="instituicao">
         <h1>Universidade Federal do Delta do Parnaíba</h1>
         <h2>Núcleo de Estudos em Matemática</h2>
     </div>
-    <div>Contato: nemat.ufdpar@gmail.com</div>
+    <div>Contato: <a href="mailto:nemat.ufdpar@gmail.com">nemat.ufdpar@gmail.com</a></div>
 </body>
 </html>
