--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
     <link rel="manifest" href="./images/favicon/site.webmanifest">
+    <script>
+        window.location.href="https://sites.google.com/view/nemat-ufdpar/o-que-%C3%A9-o-nematufdpar"
+    </script>
     <title>NEMAT-UFDPar</title>
 </head>
 <body>
