--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
     <link rel="manifest" href="./images/favicon/site.webmanifest">
     <script>
-        window.location.href="https://sites.google.com/view/nemat-ufdpar/o-que-%C3%A9-o-nematufdpar"
+        window.location.href="https://sites.google.com/view/nemat-ufdpar/"
     </script>
     <title>NEMAT-UFDPar</title>
 </head>
