Initial commit with Vite + React

--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./images/favicon/site.webmanifest">
-    <script>
-        window.location.href="https://sites.google.com/view/nemat-ufdpar/"
-    </script>
-    <title>NEMAT-UFDPar</title>
-</head>
-<body>
-    <div class="logo">
-        <img src="./images/logo-nemat.png" height="200px" alt="Logo NEMAT-UFDPar">
-    </div>
-    <div class="instituicao">
-        <h1>Universidade Federal do Delta do Parnaíba</h1>
-        <h2>Núcleo de Estudos em Matemática</h2>
-    </div>
-    <div>Contato: <a href="mailto:nemat.ufdpar@gmail.com">nemat.ufdpar@gmail.com</a></div>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/nemat-logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Curso de LaTeX - UFDPar</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
